# porigon

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  test.js
.github/workflows/: rust.yml
engine/: Cargo.toml
engine/src/: collectors.rs  doc_id_storage.rs  lib.rs  searchable.rs  serialization.rs  streams.rs
engine/src/searchable/: builder.rs  mod.rs  storage.rs
engine/src/text/: mod.rs  normalizer.rs
wasm-example/: Cargo.toml  build_fst.js  download_data.sh  query_fst.js
wasm-example/src/: lib.rs
