[package]
name = "porigon"
version = "0.2.0"
authors = ["Maurus Cuelenaere <mcuelenaere@gmail.com>"]
description = "Lightweight FST-based autocompleter library, targeting WebAssembly and data stored in-memory"
repository = "https://github.com/mcuelenaere/porigon"
license = "MIT"
edition = "2018"

[lib]
name = "porigon"

[dependencies]
fst = { version = "0.4.5", default-features = false }
levenshtein_automata = "0.2.0"
itertools = "0.10.0"
maybe-owned = "0.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7.19", optional = true }

[features]
serde_support = [ "serde" ]
rkyv_support = [ "rkyv" ]