[package]
name = "porigon"
version = "0.4.0"
authors = ["Maurus Cuelenaere <mcuelenaere@gmail.com>"]
description = "Lightweight FST-based autocompleter library, targeting WebAssembly and data stored in-memory"
repository = "https://github.com/mcuelenaere/porigon"
license = "MIT"
edition = "2021"

[lib]
name = "porigon"

[dependencies]
fst = { version = "0.4", default-features = false }
levenshtein_automata = "0.2"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7", optional = true }
q_compress = { git = "https://github.com/mwlon/quantile-compression", optional = true }
thiserror = "1.0"
unicode-normalization = { version = "0.1", optional = true }

[features]
compression = ["q_compress"]
unicode = ["unicode-normalization"]