[package]
name = "porigon"
version = "0.4.0"
authors = ["Maurus Cuelenaere <mcuelenaere@gmail.com>"]
description = "Lightweight FST-based autocompleter library, targeting WebAssembly and data stored in-memory"
repository = "https://github.com/mcuelenaere/porigon"
license = "MIT"
edition = "2021"

[lib]
name = "porigon"

[dependencies]
fst = { version = "0.4", default-features = false }
levenshtein_automata = "0.2"
itertools = "0.10"
maybe-owned = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7", optional = true }
q_compress = "0.11.6"
thiserror = "1.0"