[package]
name = "porigon-wasm-example"
version = "0.2.0"
authors = ["Maurus Cuelenaere <mcuelenaere@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
rkyv = "0.7.26"
rkyv_derive = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
stats_alloc = "0.1.8"
porigon = { path = "../engine", features = ["rkyv_support"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }